Hive Change Log

Trunk -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-743. Let user specify serde for custom scripts.
    (Namit Jain via rmurthy)

    HIVE-749. add hive.optimize.pruner
    (Zheng Shao via namit)

    HIVE-693. Add a AWS S3 log format deserializer
    (Zheng Shao and Andraz Tori via namit)

    HIVE-699. Functions with variable length arguments
    (Zheng Shao via namit)

    HIVE-713. Integrate operator counters into query plan to view progress of
    queries. (Namit Jain and Raghu Murthy via zshao)

    HIVE-187. Preliminary ODBC Support. (Eric Hwang via rmurthy)

    HIVE-708. Add TypedBytes SerDe for transform. (Namit Jain via zshao)

    HIVE-777. CREATE TABLE with STRUCT type. (He Yongqiang via zshao)

    HIVE-792. Support "add archive" in addition to "add file" and "add jar".
    (He Yongqiang via zshao)

    HIVE-645. UDF to run JDBC
    (Edward Capriolo via namit)

    HIVE-785. Add RecordWriter for ScriptOperator. (Namit Jain via zshao)

    HIVE-687. Add UDF unhex. (Mihir Kedia via namit)

    HIVE-591. Add Unique Join. (Emil Ibrishimov via namit)

    HIVE-667. Provide hive ql to check table/partition status.
    (Yongqiang He via zshao)

    HIVE-843. Add UDFs for hour, minute and second
    (Zheng Shao via namit)

    HIVE-854. Provide for post-execute hooks.
    (Namit Jain via rmurthy)

    HIVE-853. Provide hints for controlling join order
    (Emil Ibrishimov via namit)

    HIVE-31. Support Create Table As Select
    (Ning Zhang via namit)

  IMPROVEMENTS

    HIVE-760. Add version info to META-INF/MANIFEST.MF.
    (Bill Graham via zshao)

    HIVE-759. Add "hive.intermediate.compression.codec/type" option.
    (Yongqiang He via zshao)

    HIVE-732. Use LazyBinarySerDe (Zheng Shao via namit)

    HIVE-768. Add conf var to disable counters introduced by HIVE-713.
    (Namit Jain via zshao)

    HIVE-679. Adding the basic JDBC methods to allow querying using the
    SQuirrelSQL tool. (Bill Graham via rmurthy)
